// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Callout Callout snapshot renders 1`] = `
<div
  className="column callout grid4"
>
  <div
    className="grid12"
  >
    <div
      className="callout-image"
    >
      <a
        href="gallery.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="Photo Gallery"
          src="https://farm6.staticflickr.com/5682/21652998256_7c5d0ce495_b.jpg"
        />
      </a>
    </div>
  </div>
  <div
    className="grid12"
  >
    <div
      className="callout-header grid12"
    >
      <a
        href="gallery.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        <h2
          className="callout-title"
        >
          Photo Gallery
        </h2>
      </a>
    </div>
    <div
      className="callout-body grid12"
    >
      A carousel of some of my best photographs throughout my life. They are primarily landscape photographs, macro photographs, and travel photographs. The carousel was built using the Galleria jQuery plugin. You can click on the left or right arrows to navigate, or swipe on a touch enabled device.
      <br />
      <br />
      <div
        className="centeredbutton"
      >
        <a
          href="gallery.html"
          rel="noopener noreferrer"
          target="_blank"
        >
          Photo Gallery
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Callout CalloutHeader snapshot renders 1`] = `
<div
  className="callout-header grid12"
>
  <h2
    className="callout-title"
  >
    Photo Gallery
  </h2>
</div>
`;

exports[`Callout CalloutRoundSm snapshot renders 1`] = `
<div
  className="grid4fix pad"
>
  <div
    className="grid12 round-img-container"
  >
    <a
      href="gallery.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Photo Gallery"
        src="https://farm6.staticflickr.com/5682/21652998256_7c5d0ce495_b.jpg"
      />
    </a>
  </div>
  <div
    className="grid12 callout-header"
  >
    <a
      href="gallery.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      <h3
        className="callout-title"
      >
        Photo Gallery
      </h3>
    </a>
  </div>
</div>
`;

exports[`Callout CalloutRoundTiny snapshot renders 1`] = `
<div
  className="grid2fix social-image"
>
  <a
    href="gallery.html"
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="Photo Gallery"
      src="https://farm6.staticflickr.com/5682/21652998256_7c5d0ce495_b.jpg"
    />
  </a>
</div>
`;
